# rust-db-rest-api-proxy

./: Cargo.toml  README.md
src/: index.html  main.rs  test.rs
